test version control on notebook

--- a/test_notebook/JuliaTests.ipynb
+++ b/test_notebook/JuliaTests.ipynb
@@ -15,6 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "###testing to see if the version control for the notebook  works without output "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "function path_constructor(strings::Vector{String})\n",
     "    DATA_FOLDER = ENV[\"STARSTATS_TEST_DATA_FOLDER\"]\n",
     "    return DATA_FOLDER*\"/LMC/LMC_0.00_$(strings[1])_1.00.track.gz\"\n",
