--- a/test_notebook/clean_JuliaTests.ipynb
+++ b/test_notebook/clean_JuliaTests.ipynb
@@ -1748,13 +1748,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#84 (generic function with 1 method)"
+       "(0.8352279632618429, 0.00818156445218122)"
       ]
      },
      "metadata": {},
@@ -1762,6 +1762,7 @@
     }
    ],
    "source": [
+    "my_kde2d = kde((logM,rotation),weights=dtdx)\n",
     "kde_function2d = x-> pdf(my_kde2d, x[1],x[2])\n",
     "values1= logM\n",
     "values2=rotation\n",
@@ -1774,9 +1775,9 @@
     "a = (minval1, minval2)\n",
     "b = (maxval1, maxval2)\n",
     "\n",
-    "#integral = hcubature(kde_function2d,[0.9,0.0], [1.3, 0.3])\n",
-    "# @show integral\n",
-    "kde_function2d\n",
+    "integral = hcubature(kde_function2d,[0.9, 0.0],[1.2,0.4], rtol=1e-2,initdiv=1)\n",
+    "@show integral\n",
+    "#kde_function2d\n",
     "\n",
     "#"
    ]
